--- a/style.css
+++ b/style.css
@@ -1,14 +1,18 @@
 img{
-  width: 60%;
+  width: 35%;
   justify-content: center;
   align-items: center;
   }
 
 body{
+  margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   background-color: white;
+  padding: 20px;
   color: black;
   text-align: center;
+  
+  
 }
 
 header{
@@ -16,7 +20,13 @@ header{
   color: black;
   text-align: center;
 }
-
-header h1{
+footer{
+  text-align: center;
+}
+h1{
   font-size: 2rem;
+  width: 100%;
+  height: 50px;
+  background: blue;
+  padding: 10px;
 }
